# to-do

./: pyproject.toml
alembic/: env.py
alembic/versions/: 8f244854ffbd_initial_migration.py  dc6ffc8207ea_fix_users_table.py
src/: __init__.py  database.py  dependencies.py  main.py  settings.py
src/auth/: jwt.py  repository.py  router.py  service.py  utils.py
src/repository/: base.py
src/tasks/: enums.py  models.py  router.py  schemas.py
src/users/: models.py  router.py  schemas.py
