[project]
name = "to-do-list"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "passlib>=1.7.4",
    "pydantic[email]>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.2",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
    "argon2-cffi>=25.1.0",
]
